tests/validprograms/project/test_more_than_six_parameters.tds
Program {
	Int f(Int x1, Int x2, Int x3, Int x4, Int x5, Int x6, Int x7) {
		return x7;
	}
	
	void print(Int x) extern;
	
	void main() {
		print(f(0, 0, 0, 0, 0, 0, 1));
	}
}
