tests/invalidprograms/semantic/return.tds
Program {
	Int zero() {
		return 0;
	}

	Int f() {
		return zero;
	}

	void main() {
		f();
	}
}

